fixed HTML warning (cellspacing)

--- a/contenido/plugins/search_solr/styles/right_bottom.css
+++ b/contenido/plugins/search_solr/styles/right_bottom.css
@@ -34,3 +34,9 @@ legend {
 label {
 	font-weight: bold;
 }
+
+
+fieldset table {
+    border-collapse: collapse;
+}
+
